[package]
name = "rossete-rdf"
version = "0.1.0"
edition = "2021"
authors = ["Rubén Cid Costa"] # <https://github.com/RubenCid35>
readme = "./README.md"
license = "MIT"
repository = "https://github.com/RubenCid35/rossete-rdf"
description = "This application is intended to generate a rdf file from one or varios datasets in different formats and a RML mapping."
keywords = [
    "rdf",
    "linked-data"
]
include = [
    "**/*.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Interfaz CLI
clap = "2.33"
# Logging Utilities
colored = "2.0.0"          # Sirve para tener outputs de colores. Para la interfaz
chrono = "0.4.19"
# Reading Files 
encoding_rs = "0.8.29"     # Lectura de datos
encoding_rs_io = "0.1.7"   # Lectura de datos en diferentes encodings
# Operaciones Regex: Son mejores para buscar dentro de texto.
regex = {version="1.5.4", features=["perf-inline"]}
lazy_static = "1.4.0"      # Faster Regex. No multiple compilations
# Data Files
csv="*"
serde_json = "1.0.74"
jsonpath_lib = "0.3.0"
roxmltree = "0.14.1" # XML parser

[dependencies.rusqlite]
# Database Interface
version = "0.26.3"
features = ["bundled", "array"] # SQLITE Engine is builint the executable (more space but it allows better usage)