[package]
name = "rossete-rdf"
version = "0.1.1"
edition = "2021"
authors = ["Rubén Cid Costa"]                                                                                                           # <https://github.com/RubenCid35>
readme = "./README.md"
license = "MIT"
repository = "https://github.com/RubenCid35/rossete-rdf"
description = "This application is intended to generate a rdf file from one or varios datasets in different formats and a RML mapping."
keywords = ["rdf", "linked-data"]
include = ["**/*.rs", "Cargo.toml"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.64"
